--- a/app/src/main/res/layout/send_payment.xml
+++ b/app/src/main/res/layout/send_payment.xml
@@ -137,7 +137,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp">
 
-        <tech.nextcash.nextcashwallet.Button
+        <tech.nextcash.nextcashwallet.TextButton
             android:id="@+id/sendMax"
             style="@style/Button"
             android:layout_alignParentEnd="true"
@@ -277,7 +277,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"/>
 
-    <tech.nextcash.nextcashwallet.Button
+    <tech.nextcash.nextcashwallet.TextButton
         android:id="@+id/sendPayment"
         style="@style/Button"
         android:text="@string/continue_string"/>
