--- a/app/src/main/res/layout/add_wallet.xml
+++ b/app/src/main/res/layout/add_wallet.xml
@@ -7,17 +7,17 @@
     android:gravity="center_horizontal"
     android:padding="20dp">
 
-    <tech.nextcash.nextcashwallet.Button
+    <tech.nextcash.nextcashwallet.TextButton
         android:id="@+id/createWallet"
         style="@style/Button"
         android:text="@string/create_new_key"/>
 
-    <tech.nextcash.nextcashwallet.Button
+    <tech.nextcash.nextcashwallet.TextButton
         android:id="@+id/recoverWallet"
         style="@style/Button"
         android:text="@string/recover_wallet"/>
 
-    <tech.nextcash.nextcashwallet.Button
+    <tech.nextcash.nextcashwallet.TextButton
         android:id="@+id/importWallet"
         style="@style/Button"
         android:text="@string/import_bip0032_key"/>
