--- a/app/src/main/res/layout/scan.xml
+++ b/app/src/main/res/layout/scan.xml
@@ -52,7 +52,7 @@
         android:layout_centerInParent="true"
         android:translationZ="1dp"/>
 
-    <tech.nextcash.nextcashwallet.Button
+    <tech.nextcash.nextcashwallet.TextButton
         android:id="@+id/enterPaymentCode"
         style="@style/Button"
         app:layout_constraintTop_toBottomOf="@id/camera"
