--- a/app/src/main/res/layout/select_recover_date.xml
+++ b/app/src/main/res/layout/select_recover_date.xml
@@ -28,7 +28,7 @@
         android:startYear="2009">
     </DatePicker>
 
-    <tech.nextcash.nextcashwallet.Button
+    <tech.nextcash.nextcashwallet.TextButton
         android:id="@+id/dateSelected"
         style="@style/Button"
         android:text="@string/okay"/>
