--- a/app/src/main/res/layout/instructions.xml
+++ b/app/src/main/res/layout/instructions.xml
@@ -127,6 +127,24 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:padding="5dp"
+            android:src="@drawable/baseline_backup_black_36dp"/>
+        <TextView
+            style="@style/Answer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:text="@string/backup_instructions"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+        <ImageView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:padding="5dp"
             android:src="@drawable/ic_send_black_36dp"/>
         <TextView
             style="@style/Answer"
