Redesign seed verification view.

--- a/app/src/main/res/layout/verify_seed.xml
+++ b/app/src/main/res/layout/verify_seed.xml
@@ -35,25 +35,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
+        style="@style/SmallHeadingText"
         android:text="@string/scroll_left_right"/>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:padding="5dp"
         android:background="#eee">
         <LinearLayout
-            android:id="@+id/seedButtons"
-            android:orientation="horizontal"
+            android:id="@+id/seedRows"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:animateLayoutChanges="true"/>
+            android:orientation="vertical"/>
     </HorizontalScrollView>
 
-    <ImageView
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textAlignment="center"
+        android:text="Remove last word"/>
+
+    <tech.nextcash.nextcashwallet.ImageButton
         android:id="@+id/removeSeedWord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
