--- a/app/src/main/res/layout/seed_word_button.xml
+++ b/app/src/main/res/layout/seed_word_button.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<tech.nextcash.nextcashwallet.TextButton
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/seedWordButton"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/button_background"
-    android:padding="8dp"
-    android:layout_margin="5dp"
-    android:textColor="#ffff"
-    android:onClick="onClick">
-
-</TextView>
+    style="@style/SmallButton"
+    android:onClick="onClick"/>
