Change spinners to specify items in the layouts instead of at runtime.

--- a/app/src/main/res/layout/view_seed.xml
+++ b/app/src/main/res/layout/view_seed.xml
@@ -42,8 +42,9 @@
             android:id="@+id/seedEntropy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="10dp"
+            android:entries="@array/mnemonic_seed_length_titles"/>
 
     </LinearLayout>
 
