--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -91,7 +91,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="10dp">
+        android:layout_marginEnd="10dp"
+        android:entries="@array/sync_frequency_titles">
 
     </Spinner>
 
