--- a/app/src/main/res/layout/add_wallet.xml
+++ b/app/src/main/res/layout/add_wallet.xml
@@ -22,4 +22,9 @@
         style="@style/Button"
         android:text="@string/import_bip0032_key"/>
 
+    <tech.nextcash.nextcashwallet.TextButton
+        android:id="@+id/scanPrivateKey"
+        style="@style/Button"
+        android:text="@string/scan_private_key"/>
+
 </LinearLayout>
