--- a/app/src/main/res/layout/transaction.xml
+++ b/app/src/main/res/layout/transaction.xml
@@ -51,12 +51,83 @@
             android:textSize="@dimen/text_size_smallheading"/>
     </LinearLayout>
 
+    <EditText
+        android:id="@+id/commentEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:inputType="textAutoComplete"
+        android:importantForAutofill="no"
+        android:hint="@string/comment_hint"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            style="@style/SmallHeadingText"
+            android:text="@string/comment"
+            android:labelFor="@id/commentEdit"/>
+
+        <tech.nextcash.nextcashwallet.TextButton
+            android:id="@+id/updateTransactionComment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            style="@style/SmallButton"
+            android:onClick="onClick"
+            android:text="@string/update"/>
+
+    </RelativeLayout>
+
+    <EditText
+        android:id="@+id/costBasisEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:inputType="numberDecimal"
+        android:importantForAutofill="no"
+        android:hint="@string/cost_basis_hint"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/costBasisTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            style="@style/SmallHeadingText"
+            android:text="@string/cost_basis"
+            android:labelFor="@id/costBasisEdit"/>
+
+        <tech.nextcash.nextcashwallet.TextButton
+            android:id="@+id/updateTransactionCostBasis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            style="@style/SmallButton"
+            android:onClick="onClick"
+            android:text="@string/update"/>
+
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/statusHeading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/SubHeadingText"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:text="@string/confirmed_in_block"/>
 
     <HorizontalScrollView
