--- a/app/src/main/res/layout/send_payment.xml
+++ b/app/src/main/res/layout/send_payment.xml
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                style="@style/SubHeadingText"
+                style="@style/SmallHeadingText"
                 android:textAlignment="textEnd"/>
 
             <TextView
