Improve transaction view updates. Improve payment request view updates. Fix issue with backing out of transactions to history.

--- a/app/src/main/res/layout/wallet_item.xml
+++ b/app/src/main/res/layout/wallet_item.xml
@@ -173,13 +173,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingStart="15dp">
+            android:paddingStart="15dp"
+            android:animateLayoutChanges="true">
 
             <LinearLayout
                 android:id="@+id/walletPendingGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:animateLayoutChanges="true">
 
                 <LinearLayout
                     android:id="@+id/walletPendingTitle"
@@ -199,6 +201,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/pending_transactions"
                         style="@style/HeadingText"/>
+
                 </LinearLayout>
 
                 <TextView
@@ -247,7 +250,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="20dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:animateLayoutChanges="true">
 
                 </LinearLayout>
             </LinearLayout>
@@ -264,7 +268,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="20dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:animateLayoutChanges="true">
 
             </LinearLayout>
 
