--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,7 +125,7 @@
         android:layout_alignParentStart="true"
         android:orientation="vertical"
         android:padding="10dp"
-        android:background="#ddd">
+        android:background="@color/colorStatusBackground">
 
         <RelativeLayout
             android:layout_width="match_parent"
