--- a/app/src/main/res/layout/wallet_history.xml
+++ b/app/src/main/res/layout/wallet_history.xml
@@ -20,7 +20,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingStart="20dp"
-            android:paddingEnd="10dp">
+            android:paddingEnd="10dp"
+            android:animateLayoutChanges="true">
 
             <LinearLayout
                 android:id="@+id/walletPendingGroup"
@@ -59,7 +60,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="20dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:animateLayoutChanges="true">
 
                 </LinearLayout>
 
@@ -77,7 +79,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="20dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:animateLayoutChanges="true">
 
             </LinearLayout>
 
